# asupersync

./: .gitignore  .rchignore  .skill-loop-progress.md  .stub-allowlist.txt  AGENTS.md  CHANGELOG.md  CHANGELOG_RESEARCH.md  CLAUDE.md  COMPREHENSIVE_DEPENDENCY_REPLACEMENT_PLAN.md  CROSS_MODULE_LOCK_ORDERING.md  Cargo.toml  DATABASE_TESTING_MIGRATION.md  KAFKA_SECURITY_AUDIT_2026-04-29.md  Makefile  PLAN_TO_BUILD_ASUPERSYNC_IN_WASM_FOR_USE_IN_BROWSERS.md  POSTGRES_LISTEN_NOTIFY_FUZZ_VALIDATION.md  PROPOSAL_TO_INTEGRATE_IDEAS_FROM_NATS_INTO_ASUPERSYNC.md  README.md  RFC9000_PACKET_NUMBER_VALIDATION.md  TESTING.md  TESTING_FOR_AGENTS.md  TRANSPORT_ROUTER_SECURITY_AUDIT.md  UPGRADE_LOG.md  WASM_API_SURFACE_CENSUS.md  WASM_MODULE_SURFACE_CENSUS.md  WASM_SIZE_PERF_BUDGETS.md  WEBSOCKET_HANDSHAKE_FUZZING.md  allow_clippy_tests.py  ansi_injection_demo.rs  append_audit.py  append_audit2.py  asupersync_plan_v4.md  asupersync_v4_formal_semantics.md  asupersync_web_demo.html  audit_index.jsonl  audit_pending_67t6xn.jsonl  auto_fix_clippy.py  bead_1qfd0.620.md  bead_metamorphic_analysis.md  cancel_bugs.txt  (+56 more)
asupersync-macros/: Cargo.toml
asupersync-macros/src/: entry.rs  instrument.rs  join.rs  lab_test.rs  lib.rs  race.rs  scope.rs  select.rs  session.rs  spawn.rs  util.rs
asupersync-macros/tests/: entry.rs  join_concurrency_lab_proof.rs  lab_test.rs
asupersync-macros/tests/compile_fail/: entry_bad_arg.rs  entry_bad_arg.stderr  entry_bad_return.rs  entry_bad_return.stderr  entry_bad_signature.rs  entry_bad_signature.stderr  entry_non_async_main.rs  entry_non_async_main.stderr  explore_seeds_bad_count.rs  explore_seeds_bad_count.stderr  explore_seeds_missing_arg.rs  explore_seeds_missing_arg.stderr  lab_test_bad_seed_range.rs  lab_test_bad_seed_range.stderr  lab_test_missing_arg.rs  lab_test_missing_arg.stderr  race_missing_cx.rs  race_missing_cx.stderr  race_single_branch.rs  race_single_branch.stderr  select_empty_branches.rs  select_empty_branches.stderr  select_missing_arrow.rs  select_missing_arrow.stderr  select_missing_cx.rs  select_missing_cx.stderr  spawn_no_args.stderr  spawn_reversed_name.rs  spawn_reversed_name.stderr  spawn_scope_name_without_future.rs  spawn_scope_name_without_future.stderr  spawn_string_as_future.rs  spawn_string_as_future.stderr  spawn_string_without_future.rs  spawn_string_without_future.stderr
conformance/: Cargo.toml  http2_h2spec.md
conformance/.beads/: issues.jsonl
conformance/quic/: README.md
conformance/raptorq_rfc6330/: TEST_PRIORITY_MATRIX.md
conformance/src/: atp_security.rs  h1_expect_continue_conformance.rs  h1_request_building_conformance.rs  h1_response_building_conformance.rs  h2_connect_method_conformance.rs  h2_continuation_conformance.rs  h2_data_end_stream_conformance.rs  h2_enable_push_conformance.rs  h2_goaway_conformance.rs  h2_ping_conformance.rs  h2_priority_conformance.rs  h2_settings_conformance.rs  hpack_conformance.rs  hpack_encoder_conformance.rs  kafka_record_batch_v2.rs  lib.rs  mysql_conformance.rs  otlp_wire_format.rs  raptorq_rfc6330.rs  reference_registry.rs  rfc6330_fixtures.rs  rfc6330_tests.rs  runner.rs  traceability.rs
conformance/src/bench/: benchmarks.rs
conformance/src/tests/: cancel_protocol.rs  channels.rs  io.rs  mod.rs  negative.rs  runtime.rs  structured_concurrency.rs
conformance/tests/: h1_request_building_conformance_exit_codes.rs  raptorq_rfc6330_cli_contract.rs
drop_unwrap_finder/: Cargo.toml
drop_unwrap_finder/src/: main.rs
fuzz/: CODEC_FUZZING.md  Cargo.toml  H1_REQUEST_LINE_FUZZING.md  HRW_ROUTING_STABILITY_FUZZING.md  README.md  README_H2_WINDOW_UPDATE.md  README_H3_DATAGRAM.md  TLS_STATE_MACHINE_FUZZING.md  postgres_parameter_messages_README.md
fuzz/conformance/: Cargo.toml  README.md
fuzz/conformance/src/: h2_continuation_ordering_conformance.rs  h2_initial_window_size_conformance.rs  h2_ping_rtt_measurement_conformance.rs  h2_rst_stream_error_propagation_conformance.rs  lib.rs
fuzz/corpus/atp_quic_datagram_frame_parse/: datagram_without_len
fuzz/corpus/fuzz_h1_response_parser/: duplicate_content_length  length_and_chunked_violation  malformed_content_length  malformed_status
fuzz/corpus/fuzz_h1_server_request/: 02_chunked_proper  03_chunked_trailers  04_expect_continue  05_content_length  06_bad_content_length  07_duplicate_content_length  08_ambiguous_body  09_bad_chunk_size  10_missing_chunk_end  11_empty_chunked  12_long_request_line  13_many_headers  16_unsupported_version  17_large_body  18_chunked_extensions  19_malformed_header
fuzz/corpus/fuzz_h1_upgrade_handling/: 01_websocket_upgrade  04_upgrade_with_keepalive  08_upgrade_with_body  09_empty_upgrade_value  10_whitespace_headers  11_duplicate_headers  13_upgrade_no_connection  14_long_upgrade_value  16_invalid_ws_key  17_missing_ws_version  19_pipelined_upgrade
fuzz/corpus/fuzz_h1_upgrade_robust/: 02_websocket_with_protocol  05_lowercase_headers  06_mixed_case  07_multiple_upgrades  12_connection_no_upgrade  15_post_upgrade  18_custom_protocol  23_split_headers  (+3 more)
fuzz/fuzz_targets/: README_quic_tls.md  atp_quic_datagram_frame_parse.rs  atp_quic_frame_parse.rs  atp_rq_symbol_datagram_parse.rs  auth_aead.rs  authenticated_mac_verification.rs  barrier_reset_wait_race.rs  barrier_wait_reset_cycle.rs  benchmark_cartel_baseline_validation.rs  binary_message_framing.rs  broadcast_lag.rs  broadcast_lag_eviction_races.rs  buf_trait_operations.rs  buffer_composition.rs  bytes_buffer_manipulation.rs  bytes_chain.rs  bytes_codec.rs  bytes_codec_advanced.rs  bytes_codec_framing.rs  bytes_mut_freeze_split.rs  bytes_mut_ops.rs  bytes_take_adapter.rs  cancel_debt_oracle.rs  cancel_hierarchy_finalize.rs  cancel_signal_ordering_oracle.rs  channel_fault_injection.rs  channel_state_machine.rs  codec_framed.rs  codec_framed_read.rs  codec_framing_comprehensive.rs  codec_raptorq.rs  codec_raptorq_roundtrip.rs  codec_round_trip.rs  concurrency_limit_metamorphic.rs  consistent_hash_ring.rs  contended_mutex_commutativity.rs  cors_origin_parsing.rs  cors_preflight_negotiation.rs  counter_monotonic_compliance.rs  cx_scope_nesting.rs  (+662 more)
(+4692 files in other folders)
