[package]
name = "asupersync-macros"
version = "0.3.7"
edition = "2024"
license = "LicenseRef-MIT-OpenAI-Anthropic-Rider"
description = "Proc macros for asupersync structured concurrency runtime"
repository = "https://github.com/Dicklesworthstone/asupersync"
readme = "README.md"
keywords = ["async", "structured", "concurrency", "macros", "proc-macro"]
categories = ["asynchronous", "concurrency"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "parsing", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
# Path-only (no version): breaks the publish-time dev-dependency cycle with the
# asupersync root crate. Dev-deps don't affect consumers, and cargo omits a
# version-less path dev-dep from the published manifest while still resolving it
# locally via the path for this crate's own tests.
asupersync = { path = "..", default-features = false, features = ["test-internals"] }
trybuild = "1.0"

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
