[package]
name = "asupersync-conformance"
version = "0.2.9"
edition = "2024"
description = "Conformance test suite for async runtime specifications"
license-file = "../LICENSE"
repository = "https://github.com/Dicklesworthstone/asupersync"
readme = "README.md"
keywords = ["async", "conformance", "runtime", "testing"]
categories = ["asynchronous", "development-tools::testing"]

[[bin]]
name = "raptorq_rfc6330_conformance"
path = "src/bin/raptorq_rfc6330_conformance.rs"

[[bin]]
name = "quic_migration_rfc9000"
path = "src/bin/quic_migration_rfc9000.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
crc32fast = "1.4"

[dev-dependencies]
# Runtimes can be added here for testing
