[package]
name = "asupersync-conformance"
version = "0.3.1"
edition = "2024"
description = "Conformance test suite for async runtime specifications"
license-file = "../LICENSE"
repository = "https://github.com/Dicklesworthstone/asupersync"
readme = "README.md"
keywords = ["async", "conformance", "runtime", "testing"]
categories = ["asynchronous", "development-tools::testing"]

[[bin]]
name = "raptorq_rfc6330_conformance"
path = "src/bin/raptorq_rfc6330_conformance.rs"

[[bin]]
name = "quic_migration_rfc9000"
path = "src/bin/quic_migration_rfc9000.rs"

[[bin]]
name = "generate_compliance_report"
path = "raptorq_rfc6330/reporting/bin/generate_compliance_report.rs"

[[bin]]
name = "check_conformance_regression"
path = "raptorq_rfc6330/reporting/bin/check_conformance_regression.rs"

[[bin]]
name = "maintain_fixtures"
path = "raptorq_rfc6330/reporting/bin/maintain_fixtures.rs"

[[bin]]
name = "mysql_conformance_runner"
path = "src/bin/mysql_conformance_runner.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
crc32fast = "1.4"
tokio = { version = "1.0", features = ["time"] }

[dev-dependencies]
# Runtimes can be added here for testing
