[package]
name = "asupersync-conformance"
version = "0.3.1"
edition = "2024"
autobins = false
description = "Conformance test suite for async runtime specifications"
license-file = "../LICENSE"
repository = "https://github.com/Dicklesworthstone/asupersync"
readme = "README.md"
keywords = ["async", "conformance", "runtime", "testing"]
categories = ["asynchronous", "development-tools::testing"]

[[bin]]
name = "raptorq_rfc6330_conformance"
path = "src/bin/raptorq_rfc6330_conformance.rs"

[[bin]]
name = "quic_migration_rfc9000"
path = "src/bin/quic_migration_rfc9000.rs"

[[bin]]
name = "generate_compliance_report"
path = "raptorq_rfc6330/reporting/bin/generate_compliance_report.rs"

[[bin]]
name = "check_conformance_regression"
path = "raptorq_rfc6330/reporting/bin/check_conformance_regression.rs"

[[bin]]
name = "maintain_fixtures"
path = "raptorq_rfc6330/reporting/bin/maintain_fixtures.rs"

[[bin]]
name = "mysql_conformance_runner"
path = "src/bin/mysql_conformance_runner.rs"

[[bin]]
name = "h2_data_end_stream_conformance"
path = "src/bin/h2_data_end_stream_conformance.rs"

[[bin]]
name = "h2_goaway_conformance"
path = "src/bin/h2_goaway_conformance.rs"

[[bin]]
name = "h2_ping_conformance"
path = "src/bin/h2_ping_conformance.rs"

[[bin]]
name = "h2_priority_conformance"
path = "src/bin/h2_priority_conformance.rs"

[[bin]]
name = "h2_settings_conformance"
path = "src/bin/h2_settings_conformance.rs"

[[bin]]
name = "hpack_conformance"
path = "src/bin/hpack_conformance.rs"

[[bin]]
name = "prometheus_conformance"
path = "src/bin/prometheus_conformance.rs"

[[bin]]
name = "otel_resource_conformance"
path = "src/bin/otel_resource_conformance.rs"

[[bin]]
name = "trace_context_conformance"
path = "src/bin/trace_context_conformance.rs"

[[bin]]
name = "metric_aggregator_conformance"
path = "src/bin/metric_aggregator_conformance.rs"

[[bin]]
name = "cross_process_trace_conformance"
path = "src/bin/cross_process_trace_conformance.rs"

[[bin]]
name = "prometheus_histogram_conformance"
path = "src/bin/prometheus_histogram_conformance.rs"

[dependencies]
asupersync = { path = ".." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
crc32fast = "1.4"
tokio = { version = "1.0", features = ["time", "net", "sync", "macros", "rt-multi-thread"] }
env_logger = "0.10"
h2 = "0.4"
bytes = "1.11"
uuid = { version = "1.0", features = ["v4"] }
prometheus-client = "0.23"
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "trace", "metrics"] }

[dev-dependencies]
# Runtimes can be added here for testing
opentelemetry-proto = "0.31"
prost = "0.14"
redis = "0.26"
# h2 reference implementation for HTTP/2 SETTINGS conformance testing
h2 = "0.4"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.11"
