[workspace]

[package]
name = "asupersync-fuzz"
version = "0.0.0"
authors = ["Automated"]
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
asupersync = { path = "..", features = ["tls", "postgres", "kafka"] }
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

# Optional: for structured fuzzing
bytes = "1"
serde = { version = "1", features = ["derive"] }
prost = "0.13"

# For SCRAM-SHA-256 parsing
base64 = "0.22"
sha2 = "0.10"

[dev-dependencies]
# For seed generation and corpus management
rand = "0.8"

# Fuzz targets - each [[bin]] entry defines a fuzz target
# Run with: cargo +nightly fuzz run <target_name>

[[bin]]
name = "fuzz_http1_request"
path = "fuzz_targets/http1_request.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_http1_response"
path = "fuzz_targets/http1_response.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_hpack_decode"
path = "fuzz_targets/hpack_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_hpack_round_trip"
path = "fuzz_targets/hpack_round_trip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_http2_frame"
path = "fuzz_targets/http2_frame.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_interest_flags"
path = "fuzz_targets/interest_flags.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_typed_symbol_parser"
path = "fuzz_targets/typed_symbol_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_mysql_wire_protocol"
path = "fuzz_targets/mysql_wire_protocol.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_postgres_wire_protocol"
path = "fuzz_targets/postgres_wire_protocol.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_raptorq_decoder"
path = "fuzz_targets/raptorq_decoder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_length_delimited_codec"
path = "fuzz_targets/length_delimited_codec.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_lines_codec"
path = "fuzz_targets/lines_codec.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_gf256_operations"
path = "fuzz_targets/gf256_operations.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_channel_state_machine"
path = "fuzz_targets/channel_state_machine.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_websocket_frame_parsing"
path = "fuzz_targets/websocket_frame_parsing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_h3_native_protocol"
path = "fuzz_targets/h3_native_protocol.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_quic_core_protocol"
path = "fuzz_targets/quic_core_protocol.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_quic_frame_parsing"
path = "fuzz_targets/quic_frame_parsing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_tls_message_parsing"
path = "fuzz_targets/tls_message_parsing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_postgres_scram_auth"
path = "fuzz_targets/postgres_scram_auth.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_redis_resp_protocol"
path = "fuzz_targets/redis_resp_protocol.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_http_accept_encoding_negotiation"
path = "fuzz_targets/http_accept_encoding_negotiation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_jetstream_json_api_parsing"
path = "fuzz_targets/jetstream_json_api_parsing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_http_compression_decompression"
path = "fuzz_targets/http_compression_decompression.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_sql_injection_detection"
path = "fuzz_targets/sql_injection_detection.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_dns_protocol_parsing"
path = "fuzz_targets/dns_protocol_parsing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_trace_file_parsing"
path = "fuzz_targets/trace_file_parsing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_replay_event_deserialization"
path = "fuzz_targets/replay_event_deserialization.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_trace_compression"
path = "fuzz_targets/trace_compression.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_symbol_id_deserialization"
path = "fuzz_targets/symbol_id_deserialization.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_raptorq_symbol_parsing"
path = "fuzz_targets/raptorq_symbol_parsing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_bytes_buffer_manipulation"
path = "fuzz_targets/bytes_buffer_manipulation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_buf_trait_operations"
path = "fuzz_targets/buf_trait_operations.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_buffer_composition"
path = "fuzz_targets/buffer_composition.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_grpc_message_framing"
path = "fuzz_targets/grpc_message_framing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_bytes_codec_framing"
path = "fuzz_targets/bytes_codec_framing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_raptorq_symbol_authentication"
path = "fuzz_targets/raptorq_symbol_authentication.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_kafka_wire_protocol"
path = "fuzz_targets/kafka_wire_protocol.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_epoll_registration"
path = "fuzz_targets/epoll_registration.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_codec_framing_comprehensive"
path = "fuzz_targets/codec_framing_comprehensive.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_raptorq_aead_envelope"
path = "fuzz_targets/raptorq_aead_envelope.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_raptorq_matrix_elimination"
path = "fuzz_targets/raptorq_matrix_elimination.rs"
test = false
doc = false
bench = false
