[workspace]

[package]
name = "asupersync-fuzz"
version = "0.0.0"
authors = ["Automated"]
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
asupersync = { path = "..", features = ["tls", "postgres", "mysql", "kafka", "test-internals", "trace-compression"] }
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
libc = "0.2"

# Optional: for structured fuzzing
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost = "0.13"
futures = "0.3"
futures-util = "0.3"

# For SCRAM-SHA-256 parsing
base64 = "0.22"
sha2 = "0.10"

# For MessagePack serialization in trace streaming tests
rmp-serde = "1.3"

# For concurrency limit metamorphic testing
pin-project = "1"
parking_lot = "0.12"

[dev-dependencies]
# For seed generation and corpus management
rand = "0.8"

# Fuzz targets - each [[bin]] entry defines a fuzz target
# Run with: cargo +nightly fuzz run <target_name>

[[bin]]
name = "fuzz_http1_request"
path = "fuzz_targets/http1_request.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_http1_response"
path = "fuzz_targets/http1_response.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_hpack_decode"
path = "fuzz_targets/hpack_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_hpack_round_trip"
path = "fuzz_targets/hpack_round_trip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_http2_frame"
path = "fuzz_targets/http2_frame.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_interest_flags"
path = "fuzz_targets/interest_flags.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_typed_symbol_parser"
path = "fuzz_targets/typed_symbol_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_mysql_wire_protocol"
path = "fuzz_targets/mysql_wire_protocol.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_postgres_wire_protocol"
path = "fuzz_targets/postgres_wire_protocol.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_raptorq_decoder"
path = "fuzz_targets/raptorq_decoder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_length_delimited_codec"
path = "fuzz_targets/length_delimited_codec.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_lines_codec"
path = "fuzz_targets/lines_codec.rs"
test = false
doc = false
bench = false

[[bin]]
name = "codec_round_trip"
path = "fuzz_targets/codec_round_trip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "h1_request_line"
path = "fuzz_targets/h1_request_line.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_gf256_operations"
path = "fuzz_targets/gf256_operations.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_channel_state_machine"
path = "fuzz_targets/channel_state_machine.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_websocket_frame_parsing"
path = "fuzz_targets/websocket_frame_parsing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_websocket_frame_fuzzing"
path = "fuzz_targets/websocket_frame_fuzzing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "websocket_frame"
path = "fuzz_targets/websocket_frame.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_trace_event_fuzzing"
path = "fuzz_targets/trace_event_fuzzing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_h3_native_protocol"
path = "fuzz_targets/h3_native_protocol.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_quic_core_protocol"
path = "fuzz_targets/quic_core_protocol.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_quic_frame_parsing"
path = "fuzz_targets/quic_frame_parsing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_quic_tls_state_machine"
path = "fuzz_targets/quic_tls_state_machine.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_tls_message_parsing"
path = "fuzz_targets/tls_message_parsing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_postgres_scram_auth"
path = "fuzz_targets/postgres_scram_auth.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_redis_resp_protocol"
path = "fuzz_targets/redis_resp_protocol.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_http_accept_encoding_negotiation"
path = "fuzz_targets/http_accept_encoding_negotiation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_jetstream_json_api_parsing"
path = "fuzz_targets/jetstream_json_api_parsing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_http_compression_decompression"
path = "fuzz_targets/http_compression_decompression.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_sql_injection_detection"
path = "fuzz_targets/sql_injection_detection.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_dns_protocol_parsing"
path = "fuzz_targets/dns_protocol_parsing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_trace_file_parsing"
path = "fuzz_targets/trace_file_parsing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_trace_file_durability"
path = "fuzz_targets/trace_file_durability.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_replay_event_deserialization"
path = "fuzz_targets/replay_event_deserialization.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_trace_compression"
path = "fuzz_targets/trace_compression.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_symbol_id_deserialization"
path = "fuzz_targets/symbol_id_deserialization.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_raptorq_symbol_parsing"
path = "fuzz_targets/raptorq_symbol_parsing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_bytes_buffer_manipulation"
path = "fuzz_targets/bytes_buffer_manipulation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_buf_trait_operations"
path = "fuzz_targets/buf_trait_operations.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_buffer_composition"
path = "fuzz_targets/buffer_composition.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_grpc_message_framing"
path = "fuzz_targets/grpc_message_framing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_bytes_codec_framing"
path = "fuzz_targets/bytes_codec_framing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_raptorq_symbol_authentication"
path = "fuzz_targets/raptorq_symbol_authentication.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_kafka_wire_protocol"
path = "fuzz_targets/kafka_wire_protocol.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_epoll_registration"
path = "fuzz_targets/epoll_registration.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_codec_framing_comprehensive"
path = "fuzz_targets/codec_framing_comprehensive.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_watch_channel"
path = "fuzz_targets/watch_channel.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_h2_state_machine"
path = "fuzz_targets/h2_state_machine.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_raptorq_aead_envelope"
path = "fuzz_targets/raptorq_aead_envelope.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_raptorq_matrix_elimination"
path = "fuzz_targets/raptorq_matrix_elimination.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_local_queue"
path = "fuzz_targets/local_queue.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_qpack_decode"
path = "fuzz_targets/qpack_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_raptorq_systematic"
path = "fuzz_targets/raptorq_systematic.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_hpack_eviction"
path = "fuzz_targets/hpack_eviction.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_websocket_deflate"
path = "fuzz_targets/websocket_deflate.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_h1_body_stream"
path = "fuzz_targets/h1_body_stream.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_trace_event_serialization"
path = "fuzz_targets/trace_event_serialization.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_channel_fault_injection"
path = "fuzz_targets/channel_fault_injection.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_io_uring_reactor"
path = "fuzz_targets/io_uring_reactor.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_raptorq_linalg"
path = "fuzz_targets/raptorq_linalg.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_framed_codec"
path = "fuzz_targets/framed_codec.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_http1_chunked"
path = "fuzz_targets/http1_chunked.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_distributed_snapshot"
path = "fuzz_targets/distributed_snapshot.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_trace_streaming"
path = "fuzz_targets/trace_streaming.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_trace_recorder_concurrent_writer"
path = "fuzz_targets/fuzz_trace_recorder_concurrent_writer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_obligation_ledger"
path = "fuzz_targets/obligation_ledger.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_intrusive_heap_operations"
path = "fuzz_targets/intrusive_heap_operations.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_bytes_chain"
path = "fuzz_targets/bytes_chain.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_broadcast_lag"
path = "fuzz_targets/broadcast_lag.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_tls_handshake_sequence"
path = "fuzz_targets/tls_handshake_sequence.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_quic_stream_lifecycle"
path = "fuzz_targets/quic_stream_lifecycle.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_protobuf_fuzzing"
path = "fuzz_targets/protobuf_fuzzing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_progress_certificate_math"
path = "fuzz_targets/progress_certificate_math.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_macaroon_attenuation_chain"
path = "fuzz_targets/macaroon_attenuation_chain.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_quic_forensic_log"
path = "fuzz_targets/quic_forensic_log.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_raptorq_codec_pipeline"
path = "fuzz_targets/raptorq_codec_pipeline.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_h3_error_parsing"
path = "fuzz_targets/h3_error_parsing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_oneshot_drop_race"
path = "fuzz_targets/oneshot_drop_race.rs"
test = false
doc = false
bench = false

[[bin]]
name = "h2_priority"
path = "fuzz_targets/h2_priority.rs"
test = false
doc = false
bench = false

[[bin]]
name = "h2_settings_frame"
path = "fuzz_targets/h2_settings_frame.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bytes_mut_freeze_split"
path = "fuzz_targets/bytes_mut_freeze_split.rs"
test = false
doc = false
bench = false

[[bin]]
name = "gf256_simd_edge_cases"
path = "fuzz_targets/gf256_simd_edge_cases.rs"
test = false
doc = false
bench = false

[[bin]]
name = "trace_canonicalize"
path = "fuzz_targets/trace_canonicalize.rs"
test = false
doc = false
bench = false

[[bin]]
name = "consistent_hash_ring"
path = "fuzz_targets/consistent_hash_ring.rs"
test = false
doc = false
bench = false

[[bin]]
name = "h3_client_response_fuzz"
path = "fuzz_targets/h3_client_response_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "postgres_prepared_statement_injection_fuzz"
path = "fuzz_targets/postgres_prepared_statement_injection_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_h1_client_comprehensive"
path = "fuzz_targets/fuzz_h1_client_comprehensive.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_unix_datagram_comprehensive"
path = "fuzz_targets/fuzz_unix_datagram_comprehensive.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lab_runtime_virtual_time_fuzz"
path = "fuzz_targets/lab_runtime_virtual_time_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tcp_accept_loop_fuzz"
path = "fuzz_targets/tcp_accept_loop_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "framed_read_fuzz"
path = "fuzz_targets/framed_read_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "stealing_fuzz"
path = "fuzz_targets/stealing_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "concurrency_limit_metamorphic"
path = "fuzz_targets/concurrency_limit_metamorphic.rs"
test = false
doc = false
bench = false

[[bin]]
name = "plan_dag_fuzz"
path = "fuzz_targets/plan_dag_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "h3_datagram_frame"
path = "fuzz_targets/h3_datagram_frame.rs"
test = false
doc = false
bench = false

[[bin]]
name = "h2_window_update_frame"
path = "fuzz_targets/h2_window_update_frame.rs"
test = false
doc = false
bench = false

[[bin]]
name = "postgres_listen_notify"
path = "fuzz_targets/postgres_listen_notify.rs"
test = false
doc = false
bench = false

[[bin]]
name = "trace_integrity"
path = "fuzz_targets/trace_integrity.rs"
test = false
doc = false
bench = false

[[bin]]
name = "h3_client"
path = "fuzz_targets/h3_client.rs"
test = false
doc = false
bench = false

[[bin]]
name = "h1_codec"
path = "fuzz_targets/h1_codec.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tls_acceptor"
path = "fuzz_targets/tls_acceptor.rs"
test = false
doc = false
bench = false

[[bin]]
name = "h2_hpack"
path = "fuzz_targets/h2_hpack.rs"
test = false
doc = false
bench = false
